fix(webapp): sanear el backend antes de reescribir la UI
Seis cosas que estaban rotas o muertas, encontradas al inventariar la webapp
para la v2:

- /upload/{account} era un stub que devolvía "faild" sin subir nada, aunque
  toda la lógica de importación ya existía en ReportService. Queda cableado a
  las tres variantes (transacción bancaria, operación, voucher manual). El
  cambio de ámbito de tenant se hace en ReportService, que es quien tiene los
  repositorios: la cuenta importada trae su propia unidad de persistencia y no
  tiene por qué coincidir con el tenant de la cookie.
- /report/transactions se elimina. No estaba deshabilitado: llamaba a
  service.getRecordStream(...) y a una clase Printer que no existen en el
  repo. Reactivarlo era escribir una feature nueva, no descomentar. Con él se
  va RecordSummary, que quedaba sin un solo uso.
- error.hmtl nunca resolvía por el typo en el nombre del archivo.
- El WebSocket STOMP no tenía ni un @MessageMapping ni un consumidor en todo
  el repo. Se elimina la config y la dependencia.
- @Secured no tenía efecto porque method security estaba comentado: cualquier
  certificado válido entraba a todo sin importar el rol. Al activarlo, las
  autoridades pasan a gatear de verdad, así que setRoles deja de reventar con
  NPE cuando el usuario no trae roles.
- CORS tenía origen "*" junto con allowCredentials(true), combinación que los
  navegadores rechazan igual. Pasa a una lista por propiedad.

Aparte, los bundles _es/_en usaban el prefijo de paquete cr.co.agropag, que no
existe desde hace años: ninguna de esas traducciones resolvía y todo caía al
texto en inglés. Y UnableToUploadReport estaba declarado bajo ReportService
pero escrito en el .properties bajo ReportController — nunca falló porque el
upload jamás llegó a correr.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>